--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <i>N.1 <sup>M</sup>ytho<sub>s</sub></i>
 
-     <img src="/iamges/image.png" alt="This is logo">
+     <img src="iamges/image.png" alt="This is logo">
      by <q>Stephen Fry</q>
 
 
@@ -27,7 +27,7 @@
 
 
     <i>N.2 <sup>N</sup>ors<sub>e</sub><sup>M</sup>ythology</i>   
-<img src="/iamges/image copy.png" alt="this is logo">
+<img src="iamges/image copy.png" alt="this is logo">
                 by<q>Stephen Fry</q>
 
 
@@ -44,7 +44,7 @@
 
          
          <i>N.3 <sup>T</sup>h<sub>e</sub><sup>p</sup>owe<sub>r</sub> <sup>o</sup><sub>f</sub> <sup>M</sup>yt<sub>h</sub></i> 
-         <img src="/iamges/image.png" alt="this is logo">
+         <img src="iamges/image.png" alt="this is logo">
          by<q>Stephen Fry</q>
          <i>Talks about <dfn>books</dfn></i>
          its price is <del>200$</del> <ins>150$</ins>
